Implement Developer 3 Buyer RFQ and Notification module